# RKI-Interview

./: README.md  pyproject.toml
rki/interview/: main.py  models.py
rki_interview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_main.py
